--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-splash-screen": "~0.27.4",
     "expo-sqlite": "^14.0.5",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
     "expo-task-manager": "~11.8.2",
     "expo-updates": "~0.25.14",
     "jpeg-js": "^0.4.4",
