--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,13 +109,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.radardetector.app'
+    namespace 'com.radartinder.app'
     defaultConfig {
-        applicationId 'com.radardetector.app'
+        applicationId 'com.radartinder.app'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.0.1"
     }
     signingConfigs {
         debug {
