--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,8 +39,8 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="radartinder"/>
-        <data android:scheme="com.radardetector.app"/>
-        <data android:scheme="exp+radar-detector"/>
+        <data android:scheme="com.radartinder.app"/>
+        <data android:scheme="exp+radar-tinder"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
