cleanup: remove modelx and tfjs assets; update navigation

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.28.9",
-    "eas-cli": "^16.28.0",
     "expo": "~51.0.39",
     "expo-asset": "~10.0.0",
     "expo-av": "~14.0.5",
@@ -34,7 +33,6 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
-    "expo-modules-core": "~1.12.26",
     "expo-notifications": "~0.28.1",
     "expo-secure-store": "~13.0.1",
     "expo-sensors": "~13.0.0",
@@ -50,6 +48,7 @@
     "onnxruntime-react-native": "^1.23.2",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.3",
