--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.radartinder.app",
       "buildNumber": "1",
+      "usesAppleSignIn": true,
       "config": {
         "googleMapsApiKey": "AIzaSyAtZoFF2DvstwmZuLxh0JR2CsK3clsYtbQ"
       },
