--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^23.7.0",
+    "@react-native-firebase/auth": "^23.7.0",
+    "@react-native-google-signin/google-signin": "^12.2.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.17",
@@ -18,12 +21,14 @@
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.28.9",
     "expo": "~51.0.39",
+    "expo-apple-authentication": "~6.4.2",
     "expo-asset": "~10.0.0",
     "expo-av": "~14.0.5",
     "expo-blur": "~13.0.3",
     "expo-build-properties": "~0.12.5",
     "expo-camera": "~15.0.0",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
     "expo-dev-client": "~4.0.14",
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.0",
