--- a/app.json
+++ b/app.json
@@ -15,12 +15,20 @@
       "bundleIdentifier": "com.radartinder.app",
       "buildNumber": "1",
       "usesAppleSignIn": true,
+      "googleServicesFile": "./GoogleService-Info.plist",
       "config": {
         "googleMapsApiKey": "AIzaSyAtZoFF2DvstwmZuLxh0JR2CsK3clsYtbQ"
       },
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "This app needs access to location to detect nearby radars and provide accurate alerts.",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "This app needs background location access to provide continuous radar detection even when the app is not active.",
+        "CFBundleURLTypes": [
+          {
+            "CFBundleURLSchemes": [
+              "com.googleusercontent.apps.1067370631256-maimlqb1grf3ktff6ifk114v569jc6k3"
+            ]
+          }
+        ],
         "UIBackgroundModes": [
           "location",
           "fetch",
@@ -35,6 +43,7 @@
     "android": {
       "package": "com.radartinder.app",
       "versionCode": 1,
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#0B0F1A"
@@ -75,6 +84,9 @@
       "expo-notifications",
       "expo-task-manager",
       "expo-secure-store",
+      "@react-native-firebase/app",
+      "@react-native-firebase/auth",
+      "./plugins/withReactNativeGradlePluginFix",
       [
         "expo-build-properties",
         {
