--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web",
-    "postinstall": "patch-package"
+    "web": "expo start --web"
   },
   "dependencies": {
+    "@dataconnect/generated": "link:src/dataconnect-generated",
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-firebase/app": "^23.7.0",
-    "@react-native-firebase/auth": "^23.7.0",
+    "@react-native-firebase/analytics": "^21.6.2",
+    "@react-native-firebase/app": "^21.6.2",
+    "@react-native-firebase/auth": "^21.6.2",
     "@react-native-google-signin/google-signin": "^12.2.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.7.2",
@@ -21,12 +22,8 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.28.9",
-<<<<<<< HEAD
     "expo": "~51.0.39",
     "expo-apple-authentication": "~6.4.2",
-=======
-    "expo": "^51.0.39",
->>>>>>> 3930831 (updated firebase)
     "expo-asset": "~10.0.0",
     "expo-av": "~14.0.5",
     "expo-blur": "~13.0.3",
@@ -62,6 +59,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.3",
+    "react-native-purchases": "^9.6.14",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
