--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,7 +17,7 @@ buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.4.1'
         classpath('com.android.tools.build:gradle:8.2.1')
-        classpath('com.facebook.react:react-native-gradle-plugin')
+        classpath('com.facebook.react:react-native-gradle-plugin:0.74.5')
         classpath('org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22')
     }
 }
