--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -50,4 +50,9 @@ if (getRNMinorVersion() < 75) {
 
 include ':app'
 
-includeBuild(new File(["node", "--print", "require.resolve('@react-native/gradle-plugin/package.json')"].execute(null, rootDir).text.trim()).getParentFile().toString())
+def rnGradlePlugin = new File(["node", "--print", "require.resolve('@react-native/gradle-plugin/package.json')"].execute(null, rootDir).text.trim())
+if (rnGradlePlugin.exists()) {
+  includeBuild(rnGradlePlugin.getParentFile().toString())
+} else {
+  println("warning: @react-native/gradle-plugin not found, skipping includeBuild to avoid /null path")
+}
