--- a/.github/workflows/ios-adhoc.yml
+++ b/.github/workflows/ios-adhoc.yml
@@ -1,96 +1,71 @@
-name: iOS AdHoc IPA (local build on macOS)
+name: Build iOS AdHoc
 
 on:
   workflow_dispatch:
-  push:
-    branches: ["beaconios"]
 
 jobs:
-  build-ios:
-    runs-on: macos-latest
-    env:
-      EAS_PROFILE: adhoc # Changed back to adhoc as per user preference
-      WORKDIR: eb-app-react-native-project
-
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
-          cache-dependency-path: "eb-app-react-native-project/package.json"
 
-      - name: Clean and Install JS deps
-        working-directory: ${{ env.WORKDIR }}
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 8
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Setup Expo and EAS
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EAS_TOKEN }}
+
+      - name: Create credentials directory
+        run: mkdir -p ./credentials
+
+      - name: Decode and save credentials
         env:
-          NODE_ENV: production
+          IOS_DIST_CERT_BASE64: ${{ secrets.IOS_DIST_CERT_BASE64 }}
+          IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
+          APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 }}
         run: |
-          rm -rf node_modules package-lock.json ios
-          npm install
+          echo "$IOS_DIST_CERT_BASE64" | base64 --decode > ./credentials/dist-cert.p12
+          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ./credentials/profile.mobileprovision
+          if [ -n "$APPLE_API_KEY_BASE64" ]; then
+            echo "$APPLE_API_KEY_BASE64" | base64 --decode > ./credentials/AuthKey_9C7772Y8RC.p8
+          fi
 
-      - name: Expo Prebuild (Generate iOS folder)
-        working-directory: ${{ env.WORKDIR }}
+      - name: Build with EAS
         env:
-          NODE_ENV: production
+          EXPO_IOS_DIST_P12_PASSWORD: ${{ secrets.IOS_DIST_P12_PASSWORD }}
+          EAS_APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
+          EAS_APPLE_API_KEY_ISSUER_ID: ${{ secrets.APPLE_API_KEY_ISSUER_ID }}
+          EAS_APPLE_API_KEY_PATH: ./credentials/AuthKey_9C7772Y8RC.p8
         run: |
-          npx expo prebuild --platform ios --no-install
+          eas build --platform ios --profile adhoc --non-interactive --json > build.json
 
-      - name: Verify Autolinking
-        working-directory: ${{ env.WORKDIR }}
+      - name: Get build artifact URL
+        id: build_artifact
         run: |
-          npx expo-modules-autolinking resolve --platform apple --json . | grep -i "ibeacon" || (echo "❌ expo-ibeacon NOT FOUND in autolinking!" && exit 1)
-          echo "✅ expo-ibeacon found in autolinking"
+          BUILD_ID=$(jq -r '.[0].id' build.json)
+          ARTIFACT_URL=$(eas build:list --json | jq -r ".[] | select(.id == \"$BUILD_ID\") | .artifacts.applicationArchiveUrl")
+          echo "url=$ARTIFACT_URL" >> $GITHUB_OUTPUT
 
-      - name: Install Pods
-        working-directory: ${{ env.WORKDIR }}/ios
-        run: pod install
-
-      - name: Install EAS CLI
-        run: npm i -g eas-cli
-
-      - name: Restore iOS credentials files
-        working-directory: ${{ env.WORKDIR }}
+      - name: Download artifact
         run: |
-          mkdir -p credentials/ios
-          echo "$IOS_DIST_P12_BASE64" | base64 --decode > credentials/ios/dist-cert.p12
-          echo "$IOS_PROFILE_BASE64" | base64 --decode > credentials/ios/profile.mobileprovision
-
-          # Create credentials.json safely using Node
-          node -e "
-            const fs = require('fs');
-            const creds = {
-              ios: {
-                bundleIdentifier: 'com.eyebeamit.app',
-                distributionCertificate: {
-                  path: 'credentials/ios/dist-cert.p12',
-                  password: process.env.IOS_DIST_P12_PASSWORD
-                },
-                provisioningProfilePath: 'credentials/ios/profile.mobileprovision'
-              }
-            };
-            fs.writeFileSync('credentials.json', JSON.stringify(creds, null, 2));
-          "
-        env:
-          IOS_DIST_P12_BASE64: ${{ secrets.IOS_DIST_P12_BASE64 }}
-          IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
-          IOS_DIST_P12_PASSWORD: ${{ secrets.IOS_DIST_P12_PASSWORD }}
-
-      - name: Build IPA locally (no EAS remote quota)
-        working-directory: ${{ env.WORKDIR }}
-        env:
-          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-        run: |
-          eas build -p ios --profile $EAS_PROFILE --local --non-interactive --output=./app.ipa
-
-      - name: List generated files
-        working-directory: ${{ env.WORKDIR }}
-        run: ls -R
+          curl -o "RadarTinder.ipa" "${{ steps.build_artifact.outputs.url }}"
 
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ios-adhoc-ipa
-          path: "${{ env.WORKDIR }}/**/*.ipa"
+          name: RadarTinder-adhoc
+          path: RadarTinder.ipa
