--- a/eas.json
+++ b/eas.json
@@ -1,49 +1,41 @@
 {
   "cli": {
-    "version": ">= 3.0.0",
-    "appVersionSource": "local"
+    "version": ">= 16.17.3",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
       "developmentClient": true,
       "distribution": "internal",
       "env": {
-        "EXPO_PUBLIC_SUPABASE_URL": "https://igtbffnatbbtdghvcvhx.supabase.co",
-        "EXPO_PUBLIC_SUPABASE_KEY": "sb_publishable_J1ZS9yMg5bHN4uHAdmW9hA__CP0euj8",
-        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "AIzaSyAtZoFF2DvstwmZuLxh0JR2CsK3clsYtbQ"
+        "YARN_IGNORE_ENGINES": "1"
+      },
+      "ios": {
+        "simulator": false
+      },
+      "android": {
+        "buildType": "apk"
+      }
+    },
+    "adhoc": {
+      "developmentClient": true,
+      "credentialsSource": "local",
+      "distribution": "internal",
+      "ios": {
+        "simulator": false
       }
     },
     "preview": {
+      "credentialsSource": "remote",
       "distribution": "internal",
-      "android": {
-        "buildType": "apk"
-      },
-      "env": {
-        "EXPO_PUBLIC_SUPABASE_URL": "https://igtbffnatbbtdghvcvhx.supabase.co",
-        "EXPO_PUBLIC_SUPABASE_KEY": "sb_publishable_J1ZS9yMg5bHN4uHAdmW9hA__CP0euj8",
-        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "AIzaSyAtZoFF2DvstwmZuLxh0JR2CsK3clsYtbQ"
+      "ios": {
+        "simulator": false
       }
     },
     "production": {
-      "android": {
-        "buildType": "app-bundle"
-      },
-      "env": {
-        "EXPO_PUBLIC_SUPABASE_URL": "https://igtbffnatbbtdghvcvhx.supabase.co",
-        "EXPO_PUBLIC_SUPABASE_KEY": "sb_publishable_J1ZS9yMg5bHN4uHAdmW9hA__CP0euj8",
-        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "AIzaSyAtZoFF2DvstwmZuLxh0JR2CsK3clsYtbQ"
-      }
-    },
-    "production-apk": {
-      "distribution": "internal",
-      "android": {
-        "buildType": "apk"
-      },
-      "env": {
-        "EXPO_PUBLIC_SUPABASE_URL": "https://igtbffnatbbtdghvcvhx.supabase.co",
-        "EXPO_PUBLIC_SUPABASE_KEY": "sb_publishable_J1ZS9yMg5bHN4uHAdmW9hA__CP0euj8",
-        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "AIzaSyAtZoFF2DvstwmZuLxh0JR2CsK3clsYtbQ"
-      }
+      "credentialsSource": "remote",
+      "distribution": "store",
+      "autoIncrement": true
     }
   },
   "submit": {
