--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "eas-build-pre-install": "echo 'packages:\\n  - \".\"' > pnpm-workspace.yaml",
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -10,6 +11,7 @@
   },
   "dependencies": {
     "@dataconnect/generated": "link:src/dataconnect-generated",
+    "@expo/config-plugins": "^54.0.4",
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/analytics": "^21.6.2",
