--- a/.github/workflows/ios-adhoc.yml
+++ b/.github/workflows/ios-adhoc.yml
@@ -2,6 +2,9 @@ name: Build iOS AdHoc
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -20,8 +23,11 @@ jobs:
         with:
           version: 8
 
+      - name: Configure pnpm workspace
+        run: echo 'packages:\n  - "."' > pnpm-workspace.yaml
+
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Setup Expo and EAS
         uses: expo/expo-github-action@v8
