--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "eas-build-pre-install": "echo 'packages:\\n  - \".\"' > pnpm-workspace.yaml",
+    "postinstall": "patch-package && (cd ios && pod install --repo-update)",
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
