--- a/.github/workflows/ios-adhoc.yml
+++ b/.github/workflows/ios-adhoc.yml
@@ -1,4 +1,4 @@
-name: Build iOS AdHoc
+name: Build iOS AdHoc (Local on macOS)
 
 on:
   workflow_dispatch:
@@ -7,8 +7,9 @@ on:
       - master
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build-ios:
+    runs-on: macos-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -23,24 +24,11 @@ jobs:
         with:
           version: 8
 
-      - name: Configure pnpm workspace
-        run: |
-          cat <<EOF > pnpm-workspace.yaml
-          packages:
-            - '.'
-          EOF
-
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
-      - name: Setup Expo and EAS
-        uses: expo/expo-github-action@v8
-        with:
-          eas-version: latest
-          token: ${{ secrets.EAS_TOKEN }}
-
-      - name: Create credentials directory
-        run: mkdir -p ./credentials
+      - name: Install EAS CLI
+        run: pnpm add -g eas-cli
 
       - name: Decode and save credentials
         env:
@@ -48,34 +36,25 @@ jobs:
           IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
           APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 }}
         run: |
+          mkdir -p ./credentials
           echo "$IOS_DIST_CERT_BASE64" | base64 --decode > ./credentials/dist-cert.p12
           echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ./credentials/profile.mobileprovision
           if [ -n "$APPLE_API_KEY_BASE64" ]; then
             echo "$APPLE_API_KEY_BASE64" | base64 --decode > ./credentials/AuthKey_9C7772Y8RC.p8
           fi
 
-      - name: Build with EAS
+      - name: Build IPA locally
         env:
+          EXPO_TOKEN: ${{ secrets.EAS_TOKEN }}
           EXPO_IOS_DIST_P12_PASSWORD: ${{ secrets.IOS_DIST_P12_PASSWORD }}
           EAS_APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
           EAS_APPLE_API_KEY_ISSUER_ID: ${{ secrets.APPLE_API_KEY_ISSUER_ID }}
           EAS_APPLE_API_KEY_PATH: ./credentials/AuthKey_9C7772Y8RC.p8
         run: |
-          eas build --platform ios --profile adhoc --non-interactive --json > build.json
-
-      - name: Get build artifact URL
-        id: build_artifact
-        run: |
-          BUILD_ID=$(jq -r '.[0].id' build.json)
-          ARTIFACT_URL=$(eas build:list --json | jq -r ".[] | select(.id == \"$BUILD_ID\") | .artifacts.applicationArchiveUrl")
-          echo "url=$ARTIFACT_URL" >> $GITHUB_OUTPUT
-
-      - name: Download artifact
-        run: |
-          curl -o "RadarTinder.ipa" "${{ steps.build_artifact.outputs.url }}"
+          eas build --platform ios --profile adhoc --local --non-interactive --output=./RadarTinder.ipa
 
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v4
         with:
           name: RadarTinder-adhoc
-          path: RadarTinder.ipa
+          path: ./RadarTinder.ipa
