--- a/.github/workflows/ios-adhoc.yml
+++ b/.github/workflows/ios-adhoc.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build-ios:
     runs-on: macos-latest
+    env:
+      # Prefer EXPO_TOKEN, fall back to legacy EAS_TOKEN so CI doesn't run unauthenticated.
+      EXPO_TOKEN: ${{ secrets.EXPO_TOKEN || secrets.EAS_TOKEN }}
 
     steps:
       - name: Checkout repository
@@ -24,6 +27,11 @@ jobs:
         with:
           version: 8
 
+      - name: Install CocoaPods 1.16.2
+        run: |
+          sudo gem install cocoapods -v 1.16.2
+          pod --version
+
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
@@ -37,21 +45,55 @@ jobs:
           APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 }}
         run: |
           mkdir -p ./credentials
-          echo "$IOS_DIST_CERT_BASE64" | base64 --decode > ./credentials/dist-cert.p12
-          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ./credentials/profile.mobileprovision
+          if [ -n "$IOS_DIST_CERT_BASE64" ] && [ -n "$IOS_PROVISIONING_PROFILE_BASE64" ]; then
+            echo "$IOS_DIST_CERT_BASE64" | base64 --decode > ./credentials/dist-cert.p12
+            echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ./credentials/profile.mobileprovision
+          else
+            echo "Using repository credentials in ./credentials"
+          fi
           if [ -n "$APPLE_API_KEY_BASE64" ]; then
             echo "$APPLE_API_KEY_BASE64" | base64 --decode > ./credentials/AuthKey_9C7772Y8RC.p8
+          else
+            echo "Using repository Apple API key in ./credentials/AuthKey_9C7772Y8RC.p8"
           fi
+
+      - name: Verify Expo token is present
+        run: |
+          if [ -z "$EXPO_TOKEN" ]; then
+            echo "EXPO_TOKEN (or EAS_TOKEN) secret is required for EAS CLI login." >&2
+            exit 1
+          fi
+
+      - name: Write credentials.json for local build
+        env:
+          IOS_DIST_P12_PASSWORD: ${{ secrets.IOS_DIST_P12_PASSWORD }}
+        run: |
+          if [ -z "$IOS_DIST_P12_PASSWORD" ]; then
+            echo "IOS_DIST_P12_PASSWORD secret is required to decrypt credentials/dist-cert.p12." >&2
+            exit 1
+          fi
+          cat > credentials.json <<EOF
+          {
+            "ios": {
+              "adhoc": {
+                "provisioningProfilePath": "credentials/profile.mobileprovision",
+                "distributionCertificate": {
+                  "path": "credentials/dist-cert.p12",
+                  "password": "$IOS_DIST_P12_PASSWORD"
+                }
+              }
+            }
+          }
+          EOF
 
       - name: Build IPA locally
         env:
-          EXPO_TOKEN: ${{ secrets.EAS_TOKEN }}
           EXPO_IOS_DIST_P12_PASSWORD: ${{ secrets.IOS_DIST_P12_PASSWORD }}
           EAS_APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
           EAS_APPLE_API_KEY_ISSUER_ID: ${{ secrets.APPLE_API_KEY_ISSUER_ID }}
           EAS_APPLE_API_KEY_PATH: ./credentials/AuthKey_9C7772Y8RC.p8
         run: |
-          eas build --platform ios --profile adhoc --local --non-interactive --output=./RadarTinder.ipa
+          eas build --platform ios --profile adhoc --local --non-interactive --clear-cache --output=./RadarTinder.ipa
 
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v4
