--- a/.github/workflows/ios-adhoc.yml
+++ b/.github/workflows/ios-adhoc.yml
@@ -45,16 +45,30 @@ jobs:
           APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 }}
         run: |
           mkdir -p ./credentials
+          # Distribution cert + provisioning profile
           if [ -n "$IOS_DIST_CERT_BASE64" ] && [ -n "$IOS_PROVISIONING_PROFILE_BASE64" ]; then
             echo "$IOS_DIST_CERT_BASE64" | base64 --decode > ./credentials/dist-cert.p12
             echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ./credentials/profile.mobileprovision
+            echo "Decoded cert and provisioning profile from secrets."
           else
-            echo "Using repository credentials in ./credentials"
+            if [ -f ./credentials/dist-cert.p12 ] && [ -f ./credentials/profile.mobileprovision ]; then
+              echo "Using repository credentials in ./credentials"
+            else
+              echo "Missing credentials: provide IOS_DIST_CERT_BASE64 and IOS_PROVISIONING_PROFILE_BASE64 secrets or commit files to ./credentials." >&2
+              exit 1
+            fi
           fi
+          # Apple API key
           if [ -n "$APPLE_API_KEY_BASE64" ]; then
             echo "$APPLE_API_KEY_BASE64" | base64 --decode > ./credentials/AuthKey_9C7772Y8RC.p8
+            echo "Decoded Apple API key from secret."
           else
-            echo "Using repository Apple API key in ./credentials/AuthKey_9C7772Y8RC.p8"
+            if [ -f ./credentials/AuthKey_9C7772Y8RC.p8 ]; then
+              echo "Using repository Apple API key in ./credentials/AuthKey_9C7772Y8RC.p8"
+            else
+              echo "Missing Apple API key: provide APPLE_API_KEY_BASE64 secret or commit AuthKey_9C7772Y8RC.p8 to ./credentials." >&2
+              exit 1
+            fi
           fi
 
       - name: Verify Expo token is present
