--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,8 @@ platform :ios, podfile_properties['ios.deploymentTarget'] || '13.4'
 install! 'cocoapods',
   :deterministic_uuids => false
 
+use_modular_headers!
+
 prepare_react_native_project!
 
 target 'RadarTinder' do
