--- a/.github/workflows/ios-adhoc.yml
+++ b/.github/workflows/ios-adhoc.yml
@@ -1,4 +1,4 @@
-name: Build iOS AdHoc (Local on macOS)
+name: Build iOS AdHoc
 
 on:
   workflow_dispatch:
@@ -10,8 +10,7 @@ jobs:
   build-ios:
     runs-on: macos-latest
     env:
-      # Prefer EXPO_TOKEN, fall back to legacy EAS_TOKEN so CI doesn't run unauthenticated.
-      EXPO_TOKEN: ${{ secrets.EXPO_TOKEN || secrets.EAS_TOKEN }}
+      EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
 
     steps:
       - name: Checkout repository
@@ -27,7 +26,7 @@ jobs:
         with:
           version: 8
 
-      - name: Install CocoaPods 1.16.2
+      - name: Install CocoaPods
         run: |
           sudo gem install cocoapods -v 1.16.2
           pod --version
@@ -35,61 +34,26 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
-      - name: Install EAS CLI
-        run: pnpm add -g eas-cli
+      - name: Fix Firebase and install pods
+        run: |
+          cd ios
+          rm -rf Pods Podfile.lock
+          pod install --repo-update
+          cd ..
 
-      - name: Decode and save credentials
+      - name: Decode credentials
         env:
-          IOS_DIST_CERT_BASE64: ${{ secrets.IOS_DIST_CERT_BASE64 || secrets.EXPO_IOS_DIST_CERT_BASE64 || vars.IOS_DIST_CERT_BASE64 || vars.EXPO_IOS_DIST_CERT_BASE64 }}
-          IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 || secrets.EXPO_IOS_PROVISIONING_PROFILE_BASE64 || vars.IOS_PROVISIONING_PROFILE_BASE64 || vars.EXPO_IOS_PROVISIONING_PROFILE_BASE64 }}
-          APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 || secrets.EXPO_APPLE_API_KEY_BASE64 || vars.APPLE_API_KEY_BASE64 || vars.EXPO_APPLE_API_KEY_BASE64 }}
+          IOS_DIST_P12_BASE64: ${{ secrets.IOS_DIST_P12_BASE64 }}
+          IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
         run: |
-          mkdir -p ./credentials
-          # Distribution cert + provisioning profile
-          CERT_B64="${IOS_DIST_CERT_BASE64:-$EXPO_IOS_DIST_CERT_BASE64}"
-          PROFILE_B64="${IOS_PROVISIONING_PROFILE_BASE64:-$EXPO_IOS_PROVISIONING_PROFILE_BASE64}"
-          KEY_B64="${APPLE_API_KEY_BASE64:-$EXPO_APPLE_API_KEY_BASE64}"
+          mkdir -p credentials
+          echo "$IOS_DIST_P12_BASE64" | base64 --decode > credentials/dist-cert.p12
+          echo "$IOS_PROFILE_BASE64" | base64 --decode > credentials/profile.mobileprovision
 
-          if [ -n "$CERT_B64" ] && [ -n "$PROFILE_B64" ]; then
-            echo "$CERT_B64" | base64 --decode > ./credentials/dist-cert.p12
-            echo "$PROFILE_B64" | base64 --decode > ./credentials/profile.mobileprovision
-            echo "Decoded cert and provisioning profile from secrets."
-          else
-            if [ -f ./credentials/dist-cert.p12 ] && [ -f ./credentials/profile.mobileprovision ]; then
-              echo "Using repository credentials in ./credentials"
-            else
-              echo "Missing credentials: provide IOS_DIST_CERT_BASE64 and IOS_PROVISIONING_PROFILE_BASE64 secrets or commit files to ./credentials." >&2
-              exit 1
-            fi
-          fi
-          # Apple API key
-          if [ -n "$KEY_B64" ]; then
-            echo "$KEY_B64" | base64 --decode > ./credentials/AuthKey_9C7772Y8RC.p8
-            echo "Decoded Apple API key from secret."
-          else
-            if [ -f ./credentials/AuthKey_9C7772Y8RC.p8 ]; then
-              echo "Using repository Apple API key in ./credentials/AuthKey_9C7772Y8RC.p8"
-            else
-              echo "Missing Apple API key: provide APPLE_API_KEY_BASE64 secret or commit AuthKey_9C7772Y8RC.p8 to ./credentials." >&2
-              exit 1
-            fi
-          fi
-
-      - name: Verify Expo token is present
-        run: |
-          if [ -z "$EXPO_TOKEN" ]; then
-            echo "EXPO_TOKEN (or EAS_TOKEN) secret is required for EAS CLI login." >&2
-            exit 1
-          fi
-
-      - name: Write credentials.json for local build
+      - name: Create credentials.json
         env:
           IOS_DIST_P12_PASSWORD: ${{ secrets.IOS_DIST_P12_PASSWORD }}
         run: |
-          if [ -z "$IOS_DIST_P12_PASSWORD" ]; then
-            echo "IOS_DIST_P12_PASSWORD secret is required to decrypt credentials/dist-cert.p12." >&2
-            exit 1
-          fi
           cat > credentials.json <<EOF
           {
             "ios": {
@@ -104,16 +68,14 @@ jobs:
           }
           EOF
 
-      - name: Build IPA locally
-        env:
-          EXPO_IOS_DIST_P12_PASSWORD: ${{ secrets.IOS_DIST_P12_PASSWORD }}
-          EAS_APPLE_API_KEY_ID: ${{ secrets.APPLE_API_KEY_ID }}
-          EAS_APPLE_API_KEY_ISSUER_ID: ${{ secrets.APPLE_API_KEY_ISSUER_ID }}
-          EAS_APPLE_API_KEY_PATH: ./credentials/AuthKey_9C7772Y8RC.p8
+      - name: Install EAS CLI
+        run: pnpm add -g eas-cli
+
+      - name: Build IPA
         run: |
           eas build --platform ios --profile adhoc --local --non-interactive --clear-cache --output=./RadarTinder.ipa
 
-      - name: Upload IPA artifact
+      - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
           name: RadarTinder-adhoc
