--- a/.github/workflows/ios-adhoc.yml
+++ b/.github/workflows/ios-adhoc.yml
@@ -47,8 +47,8 @@ jobs:
           IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
         run: |
           mkdir -p credentials
-          echo "$IOS_DIST_P12_BASE64" | base64 -D > credentials/dist-cert.p12
-          echo "$IOS_PROFILE_BASE64" | base64 -D > credentials/profile.mobileprovision
+          echo "$IOS_DIST_P12_BASE64" | tr -d '\n\r ' | base64 -D > credentials/dist-cert.p12
+          echo "$IOS_PROFILE_BASE64" | tr -d '\n\r ' | base64 -D > credentials/profile.mobileprovision
 
       - name: Create credentials.json
         env:
