--- a/.github/workflows/ios-adhoc.yml
+++ b/.github/workflows/ios-adhoc.yml
@@ -34,6 +34,17 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
+      - name: Setup credentials from secrets
+        env:
+          IOS_DIST_P12_BASE64: ${{ secrets.IOS_DIST_P12_BASE64 }}
+          IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
+          IOS_DIST_P12_PASSWORD: ${{ secrets.IOS_DIST_P12_PASSWORD }}
+        run: |
+          mkdir -p credentials
+          echo "$IOS_DIST_P12_BASE64" | base64 -D > credentials/dist-cert.p12
+          echo "$IOS_PROFILE_BASE64" | base64 -D > credentials/profile.mobileprovision
+          ls -la credentials/
+
       - name: Fix Firebase and install pods
         run: |
           cd ios
@@ -41,21 +52,9 @@ jobs:
           pod install --repo-update
           cd ..
 
-      - name: Verify credentials
-        run: |
-          ls -la credentials/
-          file credentials/dist-cert.p12
-          file credentials/profile.mobileprovision
-
-      - name: Load environment from .env
-        run: |
-          if [ -f .env ]; then
-            export $(cat .env | grep -E "^(EXPO_TOKEN|IOS_DIST_P12_PASSWORD)=" | xargs)
-            echo "EXPO_TOKEN=${EXPO_TOKEN}" >> $GITHUB_ENV
-            echo "IOS_DIST_P12_PASSWORD=${IOS_DIST_P12_PASSWORD}" >> $GITHUB_ENV
-          fi
-
       - name: Create credentials.json
+        env:
+          IOS_DIST_P12_PASSWORD: ${{ secrets.IOS_DIST_P12_PASSWORD }}
         run: |
           cat > credentials.json <<EOF
           {
@@ -63,7 +62,7 @@ jobs:
               "provisioningProfilePath": "credentials/profile.mobileprovision",
               "distributionCertificate": {
                 "path": "credentials/dist-cert.p12",
-                "password": "${{ env.IOS_DIST_P12_PASSWORD }}"
+                "password": "$IOS_DIST_P12_PASSWORD"
               }
             }
           }
