--- a/.github/workflows/ios-adhoc.yml
+++ b/.github/workflows/ios-adhoc.yml
@@ -8,9 +8,10 @@ on:
 
 jobs:
   build-ios:
-    runs-on: macos-latest
+    runs-on: macos-14
     env:
       EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+      DEVELOPER_DIR: /Applications/Xcode_15.4.app/Contents/Developer
 
     steps:
       - name: Checkout repository
