Fix iOS build issues
- Downgrade react-native-google-mobile-ads to v14.2.4 (RN 0.74 compatible)
- Remove pnpm-lock.yaml before install to get fresh dependencies
- v16.x has codegen issues with RN 0.74.x

--- a/.github/workflows/ios-adhoc.yml
+++ b/.github/workflows/ios-adhoc.yml
@@ -37,8 +37,10 @@ jobs:
           sudo gem install cocoapods -v 1.16.2
           pod --version
 
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+      - name: Install dependencies (fresh)
+        run: |
+          rm -f pnpm-lock.yaml
+          pnpm install
 
       - name: Setup credentials from secrets
         env:
