Fix iOS build with expo prebuild and add AdMob
- Add react-native-google-mobile-ads plugin to app.json with AdMob App ID
- Downgrade react-native-google-mobile-ads to v13.4.1 (RN 0.74 codegen compatible)
- Use 'expo prebuild --clean' instead of manual pod install
- This regenerates native iOS code properly with all plugins

--- a/.github/workflows/ios-adhoc.yml
+++ b/.github/workflows/ios-adhoc.yml
@@ -53,10 +53,11 @@ jobs:
           echo "$IOS_PROFILE_BASE64" | base64 -D > credentials/profile.mobileprovision
           ls -la credentials/
 
-      - name: Fix Firebase and install pods
+      - name: Generate iOS native code
         run: |
+          rm -rf ios
+          npx expo prebuild --platform ios --clean
           cd ios
-          rm -rf Pods Podfile.lock
           pod install --repo-update
           cd ..
 
