--- a/app.json
+++ b/app.json
@@ -20,6 +20,19 @@
         "googleMapsApiKey": "AIzaSyAtZoFF2DvstwmZuLxh0JR2CsK3clsYtbQ"
       },
       "infoPlist": {
+        "GADApplicationIdentifier": "ca-app-pub-9670547831022880~5105162950",
+        "SKAdNetworkItems": [
+          { "SKAdNetworkIdentifier": "cstr6suwn9.skadnetwork" },
+          { "SKAdNetworkIdentifier": "4fzdc2evr5.skadnetwork" },
+          { "SKAdNetworkIdentifier": "2fnua5tdw4.skadnetwork" },
+          { "SKAdNetworkIdentifier": "ydx93a7ass.skadnetwork" },
+          { "SKAdNetworkIdentifier": "5a6flpkh64.skadnetwork" },
+          { "SKAdNetworkIdentifier": "p78axxw29g.skadnetwork" },
+          { "SKAdNetworkIdentifier": "v72qych5uu.skadnetwork" },
+          { "SKAdNetworkIdentifier": "c6k4g5qg8m.skadnetwork" },
+          { "SKAdNetworkIdentifier": "s39g8k73mm.skadnetwork" },
+          { "SKAdNetworkIdentifier": "3qy4746246.skadnetwork" }
+        ],
         "NSLocationWhenInUseUsageDescription": "This app needs access to location to detect nearby radars and provide accurate alerts.",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "This app needs background location access to provide continuous radar detection even when the app is not active.",
         "CFBundleURLTypes": [
@@ -86,13 +99,6 @@
       "expo-secure-store",
       "@react-native-firebase/app",
       "@react-native-firebase/auth",
-      [
-        "react-native-google-mobile-ads",
-        {
-          "androidAppId": "ca-app-pub-9670547831022880~5105162950",
-          "iosAppId": "ca-app-pub-9670547831022880~5105162950"
-        }
-      ],
       [
         "expo-build-properties",
         {
