--- a/app.json
+++ b/app.json
@@ -99,6 +99,7 @@
       "expo-secure-store",
       "@react-native-firebase/app",
       "@react-native-firebase/auth",
+      "./plugins/withFirebasePodfile.js",
       [
         "expo-build-properties",
         {
