--- a/eas.json
+++ b/eas.json
@@ -33,9 +33,12 @@
       }
     },
     "production": {
-      "credentialsSource": "remote",
+      "credentialsSource": "local",
       "distribution": "store",
-      "autoIncrement": true
+      "autoIncrement": true,
+      "android": {
+        "buildType": "app-bundle"
+      }
     }
   },
   "submit": {
