Add .easignore to reduce EAS upload size

--- a/.easignore
+++ b/.easignore
@@ -1,4 +1,26 @@
 node_modules/
+android/**/build/
+android/.gradle/
+android/**/intermediates/
+android/**/generated/
+ios/Pods/
+ios/build/
+.git/
+.vscode/
+*.keystore
+*.jks
+*.p12
+*.pem
+*.log
+*.map
+*.bak
+credentials/
+**/assets/models/*.pt
+**/assets/models/*.onnx.data
+**/assets/models/*.quant.onnx
+.venv/
+dist/
+build/node_modules/
 .git/
 .expo/
 .idea/
