--- a/app.json
+++ b/app.json
@@ -104,7 +104,9 @@
         "expo-build-properties",
         {
           "android": {
-            "minSdkVersion": 24
+            "minSdkVersion": 24,
+            "targetSdkVersion": 35,
+            "compileSdkVersion": 35
           },
           "ios": {
             "deploymentTarget": "15.1"
