--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "postinstall": "node scripts/prepare-patches.js && PATCH_PACKAGE_MANAGER=pnpm patch-package",
     "web": "expo start --web"
   },
   "dependencies": {
     "@dataconnect/generated": "link:src/dataconnect-generated",
-    "@expo/config-plugins": "^54.0.4",
     "@expo/vector-icons": "^14.0.3",
-    "@react-native/assets-registry": "^0.74.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/analytics": "^20.5.0",
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
     "@react-native-google-signin/google-signin": "^12.2.0",
+    "@react-native/assets-registry": "^0.74.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.17",
@@ -79,6 +79,8 @@
     "@react-native/gradle-plugin": "^0.74.89",
     "@types/react": "~18.2.45",
     "@types/three": "^0.182.0",
+    "babel-preset-expo": "^11.0.15",
+    "nopt": "^9.0.0",
     "patch-package": "^8.0.1",
     "react-native-svg-transformer": "^1.5.2",
     "typescript": "~5.3.3"
