--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,7 +10,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -27,6 +27,7 @@ android.enableJetifier=true
 
 # Enable AAPT2 PNG crunching
 android.enablePngCrunchInReleaseBuilds=true
+android.enableShrinkResourcesInReleaseBuilds=false
 
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
@@ -60,3 +61,5 @@ expo.useLegacyPackaging=false
 
 android.minSdkVersion=24
 android.extraMavenRepos=[]
+android.suppressUnsupportedCompileSdk=35
+android.buildToolsVersion=35.0.0
